--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,95 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
 
 body {
     font-family: monospace, Arial, Helvetica, sans-serif;
 }
 
-ol, ul {
+ol,
+ul {
     list-style: none;
 }
 
@@ -32,40 +98,40 @@ em {
 }
 
 .brown-button {
-	-moz-box-shadow: 3px 4px 0px 0px #5D4037;
-	-webkit-box-shadow: 3px 4px 0px 0px #5D4037;
-	box-shadow: 3px 4px 0px 0px #5D4037;
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #A1887F), color-stop(1, #795548));
-	background: -moz-linear-gradient(top, #A1887F 5%, #795548 100%);
-	background: -webkit-linear-gradient(top, #A1887F 5%, #795548 100%);
-	background: -o-linear-gradient(top, #A1887F 5%, #795548 100%);
-	background: -ms-linear-gradient(top, #A1887F 5%, #795548 100%);
-	background: linear-gradient(to bottom, #A1887F 5%, #795548 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#A1887F', endColorstr='#795548',GradientType=0);
-	background-color: #A1887F;
-	-moz-border-radius: 0.2em;
-	-webkit-border-radius: 0.2em;
-	border-radius: 0.3em;
-	border: 1px solid #6D4C41;
-	font-size: 1.2em;
-	font-weight: bold;
-	text-shadow: 0px 1px 0px #8D6E63;
+    -moz-box-shadow: 3px 4px 0px 0px #5D4037;
+    -webkit-box-shadow: 3px 4px 0px 0px #5D4037;
+    box-shadow: 3px 4px 0px 0px #5D4037;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #A1887F), color-stop(1, #795548));
+    background: -moz-linear-gradient(top, #A1887F 5%, #795548 100%);
+    background: -webkit-linear-gradient(top, #A1887F 5%, #795548 100%);
+    background: -o-linear-gradient(top, #A1887F 5%, #795548 100%);
+    background: -ms-linear-gradient(top, #A1887F 5%, #795548 100%);
+    background: linear-gradient(to bottom, #A1887F 5%, #795548 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#A1887F', endColorstr='#795548', GradientType=0);
+    background-color: #A1887F;
+    -moz-border-radius: 0.2em;
+    -webkit-border-radius: 0.2em;
+    border-radius: 0.3em;
+    border: 1px solid #6D4C41;
+    font-size: 1.2em;
+    font-weight: bold;
+    text-shadow: 0px 1px 0px #8D6E63;
 }
 
 .brown-button:hover {
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #795548), color-stop(1, #A1887F));
-	background: -moz-linear-gradient(top, #795548 5%, #A1887F 100%);
-	background: -webkit-linear-gradient(top, #795548 5%, #A1887F 100%);
-	background: -o-linear-gradient(top, #795548 5%, #A1887F 100%);
-	background: -ms-linear-gradient(top, #795548 5%, #A1887F 100%);
-	background: linear-gradient(to bottom, #795548 5%, #A1887F 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#795548', endColorstr='#A1887F',GradientType=0);
-	background-color: #795548;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #795548), color-stop(1, #A1887F));
+    background: -moz-linear-gradient(top, #795548 5%, #A1887F 100%);
+    background: -webkit-linear-gradient(top, #795548 5%, #A1887F 100%);
+    background: -o-linear-gradient(top, #795548 5%, #A1887F 100%);
+    background: -ms-linear-gradient(top, #795548 5%, #A1887F 100%);
+    background: linear-gradient(to bottom, #795548 5%, #A1887F 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#795548', endColorstr='#A1887F', GradientType=0);
+    background-color: #795548;
 }
 
 .brown-button:active {
-	position: relative;
-	top: 0.15em;
+    position: relative;
+    top: 0.15em;
 }
 
 .brown-button:focus {
@@ -79,6 +145,13 @@ h1 {
     text-decoration: underline;
 }
 
+.star-query {
+    float: left;
+    margin-top: -3.7em;
+    margin-right: 0.3em;
+    position: relative;
+}
+
 .tool-tip {
     float: right;
     margin-top: -3.7em;
@@ -87,6 +160,14 @@ h1 {
 }
 
 .tool-tip button {
+    background: none;
+    border: none;
+    color: #000000;
+    font-size: 1.6em;
+    font-weight: 900;
+}
+
+.star-query button {
     background: none;
     border: none;
     color: #000000;
@@ -108,9 +189,30 @@ h1 {
     border-radius: 0.3em;
 }
 
-.tool-tip:hover .tool-tip-text{
+.star-query .star-query-text {
+    visibility: hidden;
+    width: 5.5em;
+    background-color: #000000;
+    color: #FFFFFF;
+    text-align: center;
+    padding: 5px 0;
+    position: absolute;
+    top: 2.1em;
+    right: 0;
+    z-index: 1;
+    border-radius: 0.3em;
+}
+
+
+
+.tool-tip:hover .tool-tip-text {
     visibility: visible;
     right: 2em
+}
+
+.star-query:hover .star-query-text {
+    visibility: visible;
+    left: 2em
 }
 
 .game-status-details {
@@ -118,7 +220,7 @@ h1 {
     flex-wrap: wrap;
     max-width: 50%;
     margin-left: auto;
-    margin-right: auto;   
+    margin-right: auto;
     padding: 0.3em;
     text-align: center;
 }
@@ -130,7 +232,8 @@ h1 {
     width: 100%;
 }
 
-.move-counter, .timer {
+.move-counter,
+.timer {
     font-size: 1.3em;
 }
 
@@ -144,8 +247,9 @@ h1 {
     margin-left: -10px;
 }
 
-.star:first-child{
-    margin-left: 0 !important;;
+.star:first-child {
+    margin-left: 0 !important;
+    ;
 }
 
 .restart-btn {
@@ -176,7 +280,7 @@ h1 {
     background-color: #be0808;
     background-image: url("/assets/img/zodiac_card.jpg");
     background-position: center;
-    background-size:cover;
+    background-size: cover;
     border-radius: 0.3em;
     margin: 0.8em;
     box-shadow: 2px 0 10px #212121;
@@ -196,8 +300,8 @@ h1 {
     text-align: center;
 }
 
-.restart-button { 
-	padding: 0.7em 1.4em;
+.restart-button {
+    padding: 0.7em 1.4em;
 }
 
 /* Game Over Modal */
@@ -274,7 +378,8 @@ h1 {
     animation: animateCloseIcon 5s linear 2s infinite;
 }
 
-.close:hover, .close:focus {
+.close:hover,
+.close:focus {
     color: #8D6E63;
     cursor: pointer;
 }
@@ -300,7 +405,7 @@ h1 {
 
 .page-footer-link:active {
     text-decoration: none;
-}   
+}
 
 .page-footer-link:focus {
     outline: #A1887F auto 5px;
@@ -330,93 +435,276 @@ h1 {
 
 /* Animations */
 @keyframes animateTop {
-    from { top: -300px; opacity: 0; }
-    to { top: 5%; opacity: 1; }
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 5%;
+        opacity: 1;
+    }
 }
 
 @-moz-keyframes animateTop {
-    from { top: -300px; opacity: 0; }
-    to { top: 5%; opacity: 1; }
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 5%;
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes animateTop {
-    from { top: -300px; opacity: 0; }
-    to { top: 5%; opacity: 1; }
+    from {
+        top: -300px;
+        opacity: 0;
+    }
+
+    to {
+        top: 5%;
+        opacity: 1;
+    }
 }
 
 @keyframes animateIcons {
-    0% { top: 0em; left: 0em; }
-    40% { top: 0em; left: 0em; }
-    43% { top: -0.7em; left: 0em; }
-    46% { top: 0em; left: -0.3em; }
-    48% { top: -0.4em; left: 0.3em; }
-    50% { top: 0em; left: 0em; }
-    100% { top: 0em; left: 0em; }
+    0% {
+        top: 0em;
+        left: 0em;
+    }
+
+    40% {
+        top: 0em;
+        left: 0em;
+    }
+
+    43% {
+        top: -0.7em;
+        left: 0em;
+    }
+
+    46% {
+        top: 0em;
+        left: -0.3em;
+    }
+
+    48% {
+        top: -0.4em;
+        left: 0.3em;
+    }
+
+    50% {
+        top: 0em;
+        left: 0em;
+    }
+
+    100% {
+        top: 0em;
+        left: 0em;
+    }
 }
 
 @-moz-keyframes animateIcons {
-    0% { top: 0em; left: 0em; }
-    40% { top: 0em; left: 0em; }
-    43% { top: -0.7em; left: 0em; }
-    46% { top: 0em; left: -0.3em; }
-    48% { top: -0.4em; left: 0.3em; }
-    50% { top: 0em; left: 0em; }
-    100% { top: 0em; left: 0em; }
+    0% {
+        top: 0em;
+        left: 0em;
+    }
+
+    40% {
+        top: 0em;
+        left: 0em;
+    }
+
+    43% {
+        top: -0.7em;
+        left: 0em;
+    }
+
+    46% {
+        top: 0em;
+        left: -0.3em;
+    }
+
+    48% {
+        top: -0.4em;
+        left: 0.3em;
+    }
+
+    50% {
+        top: 0em;
+        left: 0em;
+    }
+
+    100% {
+        top: 0em;
+        left: 0em;
+    }
 }
 
 @-webkit-keyframes animateIcons {
-    0% { top: 0em; left: 0em; }
-    40% { top: 0em; left: 0em; }
-    43% { top: -0.7em; left: 0em; }
-    46% { top: 0em; left: -0.3em; }
-    48% { top: -0.4em; left: 0.3em; }
-    50% { top: 0em; left: 0em; }
-    100% { top: 0em; left: 0em; }
+    0% {
+        top: 0em;
+        left: 0em;
+    }
+
+    40% {
+        top: 0em;
+        left: 0em;
+    }
+
+    43% {
+        top: -0.7em;
+        left: 0em;
+    }
+
+    46% {
+        top: 0em;
+        left: -0.3em;
+    }
+
+    48% {
+        top: -0.4em;
+        left: 0.3em;
+    }
+
+    50% {
+        top: 0em;
+        left: 0em;
+    }
+
+    100% {
+        top: 0em;
+        left: 0em;
+    }
 }
 
 @keyframes animateCloseIcon {
-    0% { top: 0em; }
-    40% { top: 0em; }
-    43% { top: -0.2em; }
-    46% { top: 0em; }
-    48% { top: 0.2em; }
-    50% { top: 0em; }
-    100% { top: 0em; }
+    0% {
+        top: 0em;
+    }
+
+    40% {
+        top: 0em;
+    }
+
+    43% {
+        top: -0.2em;
+    }
+
+    46% {
+        top: 0em;
+    }
+
+    48% {
+        top: 0.2em;
+    }
+
+    50% {
+        top: 0em;
+    }
+
+    100% {
+        top: 0em;
+    }
 }
 
 @-moz-keyframes animateCloseIcon {
-    0% { top: 0em; }
-    40% { top: 0em; }
-    43% { top: -0.1em; }
-    46% { top: 0em; }
-    48% { top: 0.1em; }
-    50% { top: 0em; }
-    100% { top: 0em; }
+    0% {
+        top: 0em;
+    }
+
+    40% {
+        top: 0em;
+    }
+
+    43% {
+        top: -0.1em;
+    }
+
+    46% {
+        top: 0em;
+    }
+
+    48% {
+        top: 0.1em;
+    }
+
+    50% {
+        top: 0em;
+    }
+
+    100% {
+        top: 0em;
+    }
 }
 
 @-webkit-keyframes animateCloseIcon {
-    0% { top: 0em; }
-    40% { top: 0em; }
-    43% { top: -0.1em; }
-    46% { top: 0em; }
-    48% { top: 0.1em; }
-    50% { top: 0em; }
-    100% { top: 0em; }
+    0% {
+        top: 0em;
+    }
+
+    40% {
+        top: 0em;
+    }
+
+    43% {
+        top: -0.1em;
+    }
+
+    46% {
+        top: 0em;
+    }
+
+    48% {
+        top: 0.1em;
+    }
+
+    50% {
+        top: 0em;
+    }
+
+    100% {
+        top: 0em;
+    }
 }
 
 @keyframes animateShowImage {
-    0% { transform: rotateY(90deg); opacity: 0;}
-    100%{ transform: rotateY(0); opacity: 1; }
+    0% {
+        transform: rotateY(90deg);
+        opacity: 0;
+    }
+
+    100% {
+        transform: rotateY(0);
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes animateShowImage {
-    0% { transform: rotateY(90deg); opacity: 0;}
-    100%{ transform: rotateY(0); opacity: 1; }
+    0% {
+        transform: rotateY(90deg);
+        opacity: 0;
+    }
+
+    100% {
+        transform: rotateY(0);
+        opacity: 1;
+    }
 }
 
 @-moz-keyframes animateShowImage {
-    0% { transform: rotateY(90deg); opacity: 0;}
-    100%{ transform: rotateY(0); opacity: 1; }
+    0% {
+        transform: rotateY(90deg);
+        opacity: 0;
+    }
+
+    100% {
+        transform: rotateY(0);
+        opacity: 1;
+    }
 }
 
 /* Media Queries */
@@ -428,7 +716,9 @@ h1 {
 }
 
 @media only screen and (min-width: 600px) and (max-width: 767px) {
-    .game-card, .game-card-img {
+
+    .game-card,
+    .game-card-img {
         width: 5em;
         height: 5em;
     }
@@ -440,7 +730,9 @@ h1 {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-    .game-card, .game-card-img {
+
+    .game-card,
+    .game-card-img {
         width: 5.5em;
         height: 5.5em;
     }
@@ -463,7 +755,8 @@ h1 {
         width: initial;
     }
 
-    .game-card, .game-card-img {
+    .game-card,
+    .game-card-img {
         width: 6em;
         height: 6em;
     }
