--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,8 +278,8 @@ h1 {
     width: 4.5em;
     height: 4.5em;
     background-color: #be0808;
-
-    /*background-image: url("/assets/img/zodiac_card.jpg");*/
+    /* Set Initial Background to the Zodiac */
+    background-image: url("/assets/img/zodiac_card.jpg");
     background-position: center;
     background-size: cover;
     border-radius: 0.3em;
