--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -434,6 +434,11 @@ h1 {
     padding: 0 1.5em;
 }
 
+/*Section Hide - JQuery will remove*/
+.sectionhide {
+    display: none;
+}
+
 /* Animations */
 @keyframes animateTop {
     from {
